--- a/resume_latex.tex
+++ b/resume_latex.tex
@@ -47,9 +47,11 @@
 
 
 \begin{itemize}[leftmargin=.5cm, itemsep=.1cm, before=\subsectionv, after=\postpointsv]
-    \item Built a model using existing data to reduce false positives in Microsoft's Megadetector, lowering the false positive rate by 72\% and the false negative rate by 9\%.
-    \item Utilized SQL to create a comprehensive dataset from existing website data, then employed Python to perform regression analysis and train a multiple regression model. Then integrated the model into an SQL function to streamline model production.
-    \item Developed scripts on Linux Ubuntu servers to convert terabytes of images and audio to FLAC and PNG, with lower-resolution files backed up for disaster recovery.
+    \item Built a model to reduce false positives in Microsoft's Megadetector, lowering the false positive rate by 72\% and the false negative rate by 9\%.
+    \item Utilized SQL to create a comprehensive dataset from existing website data, then employed Python to perform regression analysis and train a multiple regression model. 
+    \item Integrated the regression model into an SQL function to streamline model production.
+    \item Visualized variables and model performance with descriptive graphs using Matplotlib and Seaborn. 
+    \item Developed scripts on Linux Ubuntu servers to convert hundreds of terabytes of images and audio files to FLAC and PNG, with lower-resolution files backed up for disaster recovery.
 \end{itemize}
 
 \betweenjobsv
@@ -61,9 +63,10 @@
 
 \begin{itemize}[leftmargin=.5cm, itemsep=.1cm, before=\subsectionv, after=\postpointsv]
     \item Developed machine learning models to identify snow depth and coverage in camera trap images.
-    \item Utilized Keras/TensorFlow and scikit-learn to implement semantic segmentation models using U-net, linear models using neural networks and regressions, and classification models using transfer learning and random forests.
+    \item Utilized Keras/TensorFlow and Scikit-learn to implement semantic segmentation models using U-net, linear models using neural networks and regressions, and classification models using transfer learning and random forests.
     \item Optimized image processing using NumPy and Pillow, and minimized RAM and VRAM usage during model training.
-    \item Created algorithms for object contouring, object detection, and outlier detection. Employed Pandas to manage, edit, and read large datasets.
+    \item Created algorithms for object contouring, object detection, and outlier detection. 
+    \item Used Pandas to manage, edit, and read large CSV/Excel files.
     \item Presented results to a biology and ecology panel, communicating technical machine learning concepts to a non-technical audience.
     \item Achieved 84\% accuracy in identifying snow depth 96\% accuracy in classifying snow coverage.
 \end{itemize}
